--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/vue-minesweeper/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.a16a48cf.js"></script>
-    <link rel="stylesheet" href="/assets/index.9177bc81.css">
+    <script type="module" crossorigin src="/vue-minesweeper/assets/index.a16a48cf.js"></script>
+    <link rel="stylesheet" href="/vue-minesweeper/assets/index.9177bc81.css">
   </head>
   <body>
     <div id="app"></div>
