--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/vue-minesweeper/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/vue-minesweeper/assets/index.129615b7.js"></script>
-    <link rel="stylesheet" href="/vue-minesweeper/assets/index.4d0d504d.css">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/vue-minesweeper/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vue-Minesweeper</title>
+    <script type="module" crossorigin src="/vue-minesweeper/assets/index.187747a8.js"></script>
+    <link rel="stylesheet" href="/vue-minesweeper/assets/index.37119f93.css">
   </head>
   <body>
     <div id="app"></div>
